@@ -9,8 +9,13 @@
 	* src/convert_sym.c: Applied patch by Hans N. [ 1581813 ] Patch
 	to ignore '|' tags.  Thanks!
 
-	* utils/gschlas/globals.c: Removed quit_func since it is
+	* gschlas/globals.c: Removed quit_func since it is
 	completely unused.
+
+	* scripts/gnet_hier_verilog.sh: Added new script by Paul Tan
+	[ 1566117 ] Script for non-flatten herarchical Verilog netlist.
+	Thanks!  Fixed some of the headers to be correct (copyright
+	in particular).
 
 2007-02-08 19:24  Dan McMahill <danmc>
 
